# ripoti-kwa-siri

./: .env.example  .gitignore  README.md  pyproject.toml  run_agent.py  run_api.py
app/: __init__.py  main.py  preview.py  runtime.py
app/api/routes/: intake.py
app/api/schemas/: intake.py
app/call_flow/: controller.py  intake.py  questions.py  summary.py  tracking.py
app/core/: config.py  logging.py  security.py
app/integrations/: llm.py  realtime.py  telephony.py
app/models/: case.py  routing.py  tracking.py
app/services/: case_store.py  intake_service.py  privacy.py  routing.py  routing_classifier.py  summary.py  tracking.py
docs/: index.md
docs/architecture/: 01-overview.md  02-voice-pipeline.md  03-call-bridging.md  04-session-lifecycle.md  05-routing-classifier.md  06-data-model.md  07-privacy-layer.md  call-room-bridging.md  case-data-model.md  realtime-runtime.md  ripoti-kwa-siri-architecture.md  voice-agent-architecture.md
docs/product/: 01-service-flow.md  02-call-stages.md  03-routing-rules.md  04-human-fallback.md  05-prompting-guide.md  call-stages.md  human-fallback-policy.md  ripoti-kwa-siri-service-flow.md  routing-rules.md  voice-agent-prompting-guide.md
infra/scripts/: apply_telephony_config.py  export_telephony_config.py
prompts/: README.md  anonymous_reporting_agent.yaml
src/application/ports/: README.md  classifier.py
src/application/use_cases/: submit_report.py
src/domain/entities/: case.py  routing.py  tracking.py
tests/: conftest.py  test_intake.py  test_privacy.py  test_routing.py  test_telephony.py
(+20 files in other folders)
